--- a/index.html
+++ b/index.html
@@ -10,63 +10,63 @@
   <ol class="list-group">
     <li>
       <strong>Owls</strong>
-        <ul>
-          <li>
-            <p>Barn owls</p>
-          </li>
-          <li>
-            <p>Long eared owl</p>
-          </li>
-          <li>
-            <p>Snowy owl</p>
-          </li>
-          <li>
-            <p>Great grey owl</p>
-          </li>
-          <li>
-            <p>Great horned owl</p>
-          </li>
-          <li>
-            <p>Western screech owl</p>
-          </li>
-        </ul>
+      <ul class="list-group-inline">
+        <li>
+          <a>Barn owls</a>
+        </li>
+        <li>
+          <a>Long eared owl</a>
+        </li>
+        <li>
+          <a>Snowy owl</a>
+        </li>
+        <li>
+          <a>Great grey owl</a>
+        </li>
+        <li>
+          <a>Great horned owl</a>
+        </li>
+        <li>
+          <a>Western screech owl</a>
+        </li>
+      </ul>
     </li>
     <li>
       <strong>Herons</strong>
-        <ul>
-          <li>
-            <p>Grey heron</p>
-          </li>
-          <li>
-            <p>Great blue heron</p>
-          </li>
-          <li>
-            <p>Night heron</p>
-          </li>
-          <li>
-            <p>Green heron</p>
-          </li>
-        </ul>
+      <ul class="list-group-inline">
+        <li>
+          <a>Grey heron</a>
+        </li>
+        <li>
+          <a>Great blue heron</a>
+        </li>
+        <li>
+          <a>Night heron</a>
+        </li>
+        <li>
+          <a>Green heron</a>
+        </li>
+      </ul>
     </li>
     <li>
       <strong>Hawks</strong>
-        <ul>
-          <li>
-            <p>Broad winged hawk</p>
-          </li>
-          <li>
-            <p>Ferruginous hawk</p>
-          </li>
-          <li>
-            <p>Red tailed hawk</p>
-          </li>
-          <li>
-            <p>Northern harrier</p>
-          </li>
-          <li>
-            <p>Rough legged buzzard</p>
-          </li>
-        </ul>
+      <ul class="list-group-inline">
+        <li>
+          <a>Broad winged hawk</a>
+        </li>
+        <li>
+          <a>Ferruginous hawk</a>
+        </li>
+        <li>
+          <a>Red tailed hawk</a>
+        </li>
+        <li>
+          <a>Northern harrier</a>
+        </li>
+        <li>
+          <a>Rough legged buzzard</a>
+        </li>
+      </ul>
     </li>
   </ol>
 </body>
